--- a/package.json
+++ b/package.json
@@ -1,1 +1,9 @@
-{}
+{
+  "dependencies": {
+    "express": "^4.17.1",
+    "midi-writer-js": "^1.7.5",
+    "socket.io": "^3.1.1",
+    "timesync": "^1.0.8",
+    "xml2js": "^0.4.23"
+  }
+}
